--- a/star-dialog.css
+++ b/star-dialog.css
@@ -1,3 +1,7 @@
 :host-context(.admin) /deep/ #modal {
     background: url('/img/floral-pattern-wallpaper-black-1600x1200.jpg') no-repeat center top fixed;
 }
+
+:host {
+    background: rgba(0,0,0,0.86);
+}
